layout issue fixed

--- a/src/components/NewFormulary/DrugDetails/components/FormularyConfigure/components/PA/PaReplace.scss
+++ b/src/components/NewFormulary/DrugDetails/components/FormularyConfigure/components/PA/PaReplace.scss
@@ -563,3 +563,12 @@
     text-transform: uppercase;
   }
 }
+
+.pa-group-description-wrapper {
+  display: flex;
+  justify-content: flex-start;
+
+  .new-group-des {
+    width: fit-content !important;
+  }
+}
